--- a/css/hopscotch-0.1.2n.css
+++ b/css/hopscotch-0.1.2n.css
@@ -422,7 +422,7 @@ div.hopscotch-bubble.no-number .hopscotch-bubble-content {
 }
 div.hopscotch-bubble .hopscotch-bubble-close {
   color: #000;
-  background: transparent url(../img/sprite-green-0.3.png) -192px -92px no-repeat;
+  background: transparent url(http://www.nickelled.com/images/tour/sprite-green-0.3.png) -192px -92px no-repeat;
   display: block;
   padding: 8px;
   position: absolute;
@@ -441,7 +441,7 @@ div.hopscotch-bubble .hopscotch-bubble-close.hide-all {
   display: none;
 }
 div.hopscotch-bubble .hopscotch-bubble-number {
-  background: transparent url(../img/sprite-green-0.3.png) 0 0 no-repeat;
+  background: transparent url(http://www.nickelled.com/images/tour/sprite-green-0.3.png) 0 0 no-repeat;
   color: #fff;
   display: block;
   float: left;
