--- a/less/hopscotch.less
+++ b/less/hopscotch.less
@@ -76,6 +76,7 @@ div.hopscotch-bubble {
     margin: -1px @bubblePadding 0 0;
     padding: 0;
     text-align: left;
+    letter-spacing: 0px;
   }
 
   .hopscotch-bubble-container {
@@ -118,7 +119,7 @@ div.hopscotch-bubble {
     right: 0;
     box-sizing: content-box;
     -webkit-box-sizing: content-box;
-    -moz-box-szing: content-box;
+    -moz-box-sizing: content-box;
 
     &.hide,
     &.hide-all {
@@ -140,7 +141,7 @@ div.hopscotch-bubble {
     height: @circleWidth;
     box-sizing: content-box;
     -webkit-box-sizing: content-box;
-    -moz-box-szing: content-box;
+    -moz-box-sizing: content-box;
   }
 
   .hopscotch-bubble-arrow-container {
