--- a/less/hopscotch.less
+++ b/less/hopscotch.less
@@ -77,6 +77,7 @@ div.hopscotch-bubble {
     padding: 0;
     text-align: left;
     letter-spacing: 0px;
+    text-transform: none;
   }
 
   .hopscotch-bubble-container {
@@ -93,6 +94,7 @@ div.hopscotch-bubble {
     margin: -5px 0 11px;
     padding-top: 8px;
     text-align: left;
+    text-transform: none;
   }
 
   .hopscotch-bubble-content {
