--- a/less/hopscotch.less
+++ b/less/hopscotch.less
@@ -70,9 +70,9 @@ div.hopscotch-bubble {
   h3 {
     color: #000;
     font-family: @bubbleFontFamily;
-    font-size: 16px;
+    font-size: 16px !important;
     font-weight: bold;
-    line-height: 19px;
+    line-height: 19px !important;
     margin: -1px @bubblePadding 0 0;
     padding: 0;
     text-align: left;
@@ -90,7 +90,8 @@ div.hopscotch-bubble {
   .hopscotch-content {
     font-family: @bubbleFontFamily;
     font-weight: normal;
-    line-height: 17px;
+    font-size: 13px !important;
+    line-height: 17px !important;
     margin: -5px 0 11px;
     padding-top: 8px;
     text-align: left;
