--- a/less/buttons.less
+++ b/less/buttons.less
@@ -38,6 +38,12 @@ div.hopscotch-bubble .hopscotch-nav-button {
   zoom:1;
   *display:inline;
   vertical-align:middle;
+  position: static;
+  left: auto;
+  top: auto;
+  right: auto;
+  bottom: auto;
+  text-indent: 0px;
 
   .round-corners(3px);
   .box-sizing();
