--- a/less/hopscotch.less
+++ b/less/hopscotch.less
@@ -85,6 +85,9 @@ div.hopscotch-bubble {
     position: relative;
     text-align: left;
     -webkit-font-smoothing: antialiased; /* to fix text flickering */
+    box-sizing: content-box;
+    -webkit-box-sizing: content-box;
+    -moz-box-szing: content-box;
   }
 
   .hopscotch-content {
