--- a/css/hopscotch-0.1.2n.css
+++ b/css/hopscotch-0.1.2n.css
@@ -278,6 +278,7 @@ div.hopscotch-bubble .hopscotch-nav-button {
   right: auto;
   bottom: auto;
   text-indent: 0px;
+  text-transform: capitalize;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
