--- a/less/buttons.less
+++ b/less/buttons.less
@@ -44,6 +44,7 @@ div.hopscotch-bubble .hopscotch-nav-button {
   right: auto;
   bottom: auto;
   text-indent: 0px;
+  text-transform: capitalize;
 
   .round-corners(3px);
   .box-sizing();
